[gd_scene load_steps=5 format=2]

[ext_resource path="res://TESTS/Menu tests/PlayerMenu.gd" type="Script" id=1]
[ext_resource path="res://TESTS/Menu tests/InteractionsMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://TESTS/Menu tests/TradingMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://TESTS/Menu tests/GUI.tscn" type="PackedScene" id=4]

[node name="PlayerMenuTest" type="Node2D" groups=[
"gui",
]]
position = Vector2( 0, -1.16637 )
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1.22771, 2.45547 )
anchor_mode = 0
current = true

[node name="InteractionsMenu" parent="Camera2D" instance=ExtResource( 2 )]
position = Vector2( -257.426, -148.718 )

[node name="TradingMenu" parent="Camera2D" instance=ExtResource( 3 )]
position = Vector2( 273.834, 151.942 )

[node name="GUI" parent="Camera2D" instance=ExtResource( 4 )]
margin_left = 0.948837
margin_top = 1.95644
margin_right = 1025.95
margin_bottom = 94.9564
[connection signal="choice_pressed" from="Camera2D/InteractionsMenu" to="." method="_on_InteractionsMenu_choice_pressed"]
